@@ -6,20 +6,20 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>iprotium</groupId>
+    <groupId>ball</groupId>
     <artifactId>parent-pom</artifactId>
     <version>1.0</version>
-    <relativePath>../iprotium-parent/pom.xml</relativePath>
+    <relativePath>../ball-parent/pom.xml</relativePath>
   </parent>
-  <groupId>iprotium</groupId>
-  <artifactId>iprotium-upnp</artifactId>
+  <groupId>ball</groupId>
+  <artifactId>ball-upnp</artifactId>
   <name>UPnP Implementation Classes</name>
   <version>1.0</version>
   <packaging>jar</packaging>
   <dependencies verbose="true">
     <dependency>
-      <groupId>iprotium</groupId>
-      <artifactId>iprotium-util</artifactId>
+      <groupId>ball</groupId>
+      <artifactId>ball-util</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
