@@ -3,18 +3,17 @@
  *
  * Copyright 2013, 2014 Allen D. Ball.  All rights reserved.
  */
-package iprotium.upnp;
+package ball.upnp;
 
 import java.beans.ConstructorProperties;
 import java.net.URI;
 
 /**
- * {@link.uri http://www.upnp.org/ UPnP} {@link ConnectionManager}
+ * {@link.uri http://www.upnp.org/ UPnP} {@link RootDevice}
  * {@link Service}.
  *
  * <table>
  *   <tr><td>{@link #TYPE}:</td><td>{@value #TYPE}</td></tr>
- *   <tr><td>{@link #ID}:</td><td>{@value #ID}</td></tr>
  * </table>
  *
  * {@bean-info}
@@ -22,11 +21,8 @@ import java.net.URI;
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
-public class ConnectionManager extends Service {
-    public static final String TYPE =
-        "urn:schemas-upnp-org:service:ConnectionManager:3";
-    public static final String ID =
-        "urn:upnp-org:serviceId:ConnectionManager";
+public class RootDevice extends Service {
+    public static final String TYPE = "upnp:rootdevice";
 
     /**
      * Sole constructor.
@@ -35,7 +31,7 @@ public class ConnectionManager extends Service {
      *                          {@link Service}.
      */
     @ConstructorProperties({ "device" })
-    public ConnectionManager(Device device) {
-        super(device, URI.create(TYPE), URI.create(ID));
+    public RootDevice(Device device) {
+        super(device, URI.create(TYPE), URI.create(TYPE));
     }
 }
