@@ -1,9 +1,9 @@
 /*
  * $Id$
  *
- * Copyright 2013 Allen D. Ball.  All rights reserved.
+ * Copyright 2013, 2014 Allen D. Ball.  All rights reserved.
  */
-package iprotium.upnp;
+package ball.upnp;
 
 import java.beans.ConstructorProperties;
 import javax.xml.bind.annotation.XmlElement;
